<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~  Copyright (c) Microsoft Corporation. All rights reserved.
  ~  Licensed under the MIT License.
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/edge_padding"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/undo"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_undo"
        android:src="@drawable/ic_fluent_arrow_undo_20_filled" />

    <View style="@style/spacerStyle" />

    <ImageButton
        android:id="@+id/color"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_color"
        android:src="@drawable/ic_fluent_color_20_filled" />

    <View style="@style/spacerStyle" />

    <ImageButton
        android:id="@+id/thickness"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_thickness"
        android:src="@drawable/ic_line_weight" />

    <View style="@style/spacerStyle" />

    <ImageButton
        android:id="@+id/highlight"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_highlight_on"
        android:src="@drawable/ic_fluent_highlight_20_filled" />

    <View style="@style/spacerStyle" />

    <ImageButton
        android:id="@+id/erase"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_erase_on"
        android:src="@drawable/ic_fluent_eraser_20_filled" />

    <View style="@style/spacerStyle" />

    <ImageButton
        android:id="@+id/clear"
        style="@style/penToolsButtonStyle"
        android:contentDescription="@string/action_clear"
        android:src="@drawable/ic_clear" />

</LinearLayout>
